# DeepBindGCN

./: .gitignore  justfile  pyproject.toml  reproduce_guideline.md  reproduce_record.md
DeepBindGCN_BC_example/: read_smi_protein_nnn_usage.py
DeepBindGCN_BC_example/pocket/: extract_pocket.py
DeepBindGCN_RG_example/pocket/: extract_pocket.py
